Small changes: scrollbar display to none, week-list li got box-shadow, and @media queries to set margin to fix that in every row there will be even number of days, week-list li hover and active background changed from #fff to #eee.

--- a/frontend/src/stylesheet/Weather_forecast.scss
+++ b/frontend/src/stylesheet/Weather_forecast.scss
@@ -24,6 +24,11 @@ $font-size-smaller: 20px;
   align-items: center;
 }
 
+
+::-webkit-scrollbar {
+  display: none;
+}
+
 //*********************//
 // ** City switcher ** //
 //*********************//
@@ -265,20 +270,30 @@ $font-size-smaller: 20px;
   -o-transition: 200ms ease;
   transition: 200ms ease;
   border-radius: 10px;
+  -webkit-box-shadow: 0 0 50px -5px rgb(10, 10, 10, 0.75);
+  box-shadow: 0 0 50px -5px rgb(10, 10, 10, 0.75);
+
+  @media (max-width: 1002px) {
+    margin: 10px 50px;
+  }
+
+  @media (max-width: 778px) {
+    margin: 10px 10px;
+  }
 }
 
 .week-list>li:hover {
   -webkit-transform: scale(1.1);
   -ms-transform: scale(1.1);
   transform: scale(1.1);
-  background: #fff;
+  background: #eeeeee;
   color: #222831;
   -webkit-box-shadow: 0 0 40px -5px rgba(0, 0, 0, 0.2);
   box-shadow: 0 0 40px -5px rgba(0, 0, 0, 0.2)
 }
 
 .week-list>li.active {
-  background: #fff;
+  background: #eeeeee;
   color: #222831;
   border-radius: 10px;
 }
